fixed the addcart button spilling div

--- a/public/style.css
+++ b/public/style.css
@@ -1086,7 +1086,7 @@ body {
   }
 
   .appphones {
-    height: 280px;
+    height: 320px;
     min-width: 180px;
     max-width: 180px;
     font-size: 15px;
@@ -1144,7 +1144,7 @@ body {
 
 @media screen and (max-width: 535px) {
   .appphones {
-    height: 280px;
+    height: 320px;
     min-width: 180px;
     max-width: 180px;
     font-size: 15px;
@@ -1203,7 +1203,7 @@ body {
 
   .appphones {
     font-size: 5px;
-    height: 250px;
+    height: 320px;
     min-width: 170px;
     max-width: 170px;
     font-size: 15px;
